tests/paczka1/fuzzy1/46030977.err
Error in line 5: 5WUj9 S883 78,2
Error in line 8: EdeMbSNKVDW S883 31,8
Error in line 12: EdeMbSNKVDW S173 8,5
Error in line 14: 2F2SNcGDD S883 105,6
